--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -50,9 +50,9 @@
                             </div>
                         </form>
                         <div class="login-bottom-text-HD21d">
-                        <div class="algin-text-login-page">
-                            <a href="https://account.viaplay.pl/forgot-password">Nie pamiętasz hasła?</a>
-                        </div>
+<!--                        <div class="algin-text-login-page">-->
+<!--                            <a href="https://account.viaplay.pl/forgot-password">Nie pamiętasz hasła?</a>-->
+<!--                        </div>-->
                         <div class="algin-text-login-page">
                         <span>Nie masz konta Cineflix?
                             <a th:href="@{/register}" class="algin-text-login-page font-bold">Załóż je tutaj</a>
