--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -35,6 +35,7 @@
                                  tabindex="-1">
                                 <div class="ProfileAvatar-module-editContainer-mwkk5"><img
                                         class="ProfileAvatar-module-avatar-2Qy4H" alt="avatar"
+                                        th:src="${avatar} ?: '/images/avatars/wilk2.png'"
                                         src="https://i-viaplay-com.akamaized.net/viaplay-static-prod/profiles/avatars/adults/boombox.png?width=500&amp;height=500">
                                     <div class="ProfileAvatar-module-editIcon-zlhbG"></div>
                                 </div>
