--- a/src/main/resources/templates/admin/users/account-manage.html
+++ b/src/main/resources/templates/admin/users/account-manage.html
@@ -29,6 +29,21 @@
                         </div>
                         <h1 class="page-title__header">Moje konto</h1></div>
                     <div class="page-info-container">
+                        <div id="avatar-section" class="overview-widget user-section nls_protected">
+                            <div class="overview-widget__column overview-widget__name">
+                                <h2 class="overview-widget__title">Avatar</h2>
+                            </div>
+                            <div class="overview-widget__column overview-widget__content">
+                                <div id="avatar-info" class="widget-data">
+                                    <img class="user-avatar" th:src="${user.avatar}" alt="Avatar użytkownika"></img>
+                                    <ul class="widget-links">
+                                        <li>
+                                            <a th:href="@{/change-avatar}">Zmień avatar</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                         <div id="e-mail-section" class="overview-widget user-section nls_protected">
                             <div class="overview-widget__column overview-widget__name">
                                 <h2 class="overview-widget__title">E-mail</h2>
@@ -91,8 +106,7 @@
 
     function submitForm(confirmAction) {
         if (confirmAction === 'deleteAccount') {
-            // Bezpośrednie przekierowanie do ścieżki usunięcia konta
-            window.location.href = '/login';
+            window.location.href = '/delete-account';
         } else {
             document.getElementById("customDialogOverlay").classList.remove("custom-dialog-shown");
         }
