--- a/src/main/resources/templates/admin/users/library.html
+++ b/src/main/resources/templates/admin/users/library.html
@@ -30,21 +30,21 @@
                                                 <li class="SearchFilters-module-item-VQgVJ"
                                                     th:classappend="${activeFilter == 'all' ? 'SearchFilters-module-active-xbXxo' : ''}">
                                                     <a class="SearchFilters-module-link-cRk6q"
-                                                       th:href="@{'/kids?filter=all'}"
+                                                       th:href="@{'/library?filter=all'}"
                                                        title="Wszystko">Wszystko</a>
                                                 </li>
 
                                                 <li class="SearchFilters-module-item-VQgVJ"
                                                     th:classappend="${activeFilter == 'series' ? 'SearchFilters-module-active-xbXxo' : ''}">
                                                     <a class="SearchFilters-module-link-cRk6q"
-                                                       th:href="@{'/kids?filter=series'}"
+                                                       th:href="@{'/library?filter=series'}"
                                                        title="Seriale">Seriale</a>
                                                 </li>
 
                                                 <li class="SearchFilters-module-item-VQgVJ"
                                                     th:classappend="${activeFilter == 'movies' ? 'SearchFilters-module-active-xbXxo' : ''}">
                                                     <a class="SearchFilters-module-link-cRk6q"
-                                                       th:href="@{'/kids?filter=movies'}"
+                                                       th:href="@{'/library?filter=movies'}"
                                                        title="Filmy">Filmy</a>
                                                 </li>
                                             </ul>
