--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -56,7 +56,9 @@
                                                th:with="formattedTitle=${seriesModel.title.replace(' ', '-')+'/sezon-1'}"
                                                th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
                                             </a>
-                                            <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"></div>
+                                            <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"
+                                                 data-testhook="item-star" th:classappend="${seriesModel.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
+                                                 th:attr="data-imdb-id=${seriesModel.imdbId}"></div>
                                             <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-"></div>
                                             <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1"></div>
                                         </div>
@@ -126,7 +128,9 @@
                                            th:with="formattedTitle=${movieModel.title.toLowerCase().replace(' ', '-')}"
                                            th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">
                                         </a>
-                                        <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"></div>
+                                        <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"
+                                             data-testhook="item-star" th:classappend="${movieModel.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
+                                             th:attr="data-imdb-id=${movieModel.imdbId}"></div>
                                         <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-"></div>
                                         <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1"></div>
                                     </div>
